--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,12 @@
   .logo-ticker-image {
     @apply h-8 w-auto;
   }
+
+  .tag {
+    @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight;
+  }
+
+  .title {
+    @apply font-bold tracking-tighter bg-gradient-to-b from-black to-[#001E80] text-transparent bg-clip-text;
+  }
 }
